fixed paragraph placement & link spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,9 @@ a {
     color:#777777;
     text-decoration:none;
     float: right;
+    padding-right:10px;
+    padding-left:10px;
 }
-
 
 
 body {
@@ -29,6 +30,7 @@ p {
     float: right;
     line-height: 150%;
     padding-right:30px;
+    padding-left: 30px;
 
 }
 
